sg.tf
# Security Group
resource "aws_security_group" "ssh-allowed" {
    vpc_id = "${aws_vpc.openstack-vpc.id}"
    
    egress {
        from_port = 0
        to_port = 0
        protocol = -1
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
      from_port = 0
        to_port = 0
        protocol = -1
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
        Name: "Openstack-Security-Group"
    }
}
